[package]
name = "simple-systemd-fetch"
version = "0.1.0"
authors = ["liushuyu <liushuyu011@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "0.16"
systemd = "0.8"
libsystemd-sys = "0.8"
iced = "0.2"
anyhow = "1"
blocking = "1"
